sonarqube-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarqube-ingress
  namespace: sonarqube
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: sonarqube.4.188.96.83.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sonar-sonarqube
                port:
                  number: 9000
